# validation

./: CMakeLists.txt  README.md  vix.json
.github/workflows/: validation-strict-ci.yml
examples/: schema.cpp  validation_examples.cpp
include/vix/validation/: BaseModel.hpp  Form.hpp  Pipe.hpp  Rule.hpp  Rules.hpp  Schema.hpp  Validate.hpp  ValidationError.hpp  ValidationErrors.hpp  ValidationResult.hpp  validation.hpp
tests/: CMakeLists.txt  validate_parsed_invalid.cpp  validate_parsed_ok.cpp  validate_parsed_smoke.cpp  validate_string_smoke.cpp
